Create and improve Select js and css Add Tickets Add TicketsOption Add initial tests with user interface Add icon fonts

--- a/_src/css/_.css
+++ b/_src/css/_.css
@@ -3,3 +3,8 @@
  * Copyright 2013-2016 Elbit Developers
  * Licensed under MIT (https://github.com/elbitdigital/base/blob/master/LICENSE)
 */
+
+.container {
+	width: 100%;
+	padding: 0 1em;
+}
