--- a/_src/css/tonovaso.css
+++ b/_src/css/tonovaso.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'tonovaso';
-  src: url('../font/tonovaso.eot?17568459');
-  src: url('../font/tonovaso.eot?17568459#iefix') format('embedded-opentype'),
-       url('../font/tonovaso.woff2?17568459') format('woff2'),
-       url('../font/tonovaso.woff?17568459') format('woff'),
-       url('../font/tonovaso.ttf?17568459') format('truetype'),
-       url('../font/tonovaso.svg?17568459#tonovaso') format('svg');
+  src: url('../font/tonovaso.eot?60450157');
+  src: url('../font/tonovaso.eot?60450157#iefix') format('embedded-opentype'),
+       url('../font/tonovaso.woff2?60450157') format('woff2'),
+       url('../font/tonovaso.woff?60450157') format('woff'),
+       url('../font/tonovaso.ttf?60450157') format('truetype'),
+       url('../font/tonovaso.svg?60450157#tonovaso') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'tonovaso';
-    src: url('../font/tonovaso.svg?17568459#tonovaso') format('svg');
+    src: url('../font/tonovaso.svg?60450157#tonovaso') format('svg');
   }
 }
 */
@@ -71,3 +71,7 @@
 .icon-person_add:before { content: '\e80d'; } /* '' */
 .icon-female:before { content: '\e80e'; } /* '' */
 .icon-male:before { content: '\e80f'; } /* '' */
+.icon-arrow_drop_down:before { content: '\e810'; } /* '' */
+.icon-keyboard_arrow_down:before { content: '\e811'; } /* '' */
+.icon-arrow_drop_down_circle:before { content: '\e812'; } /* '' */
+.icon-arrow_downward:before { content: '\e826'; } /* '' */
