--- a/_src/css/tonovaso.css
+++ b/_src/css/tonovaso.css
@@ -1,13 +1,13 @@
 @font-face {
-  font-family: 'tonovaso';
-  src: url('../font/tonovaso.eot?60450157');
-  src: url('../font/tonovaso.eot?60450157#iefix') format('embedded-opentype'),
-       url('../font/tonovaso.woff2?60450157') format('woff2'),
-       url('../font/tonovaso.woff?60450157') format('woff'),
-       url('../font/tonovaso.ttf?60450157') format('truetype'),
-       url('../font/tonovaso.svg?60450157#tonovaso') format('svg');
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'tonovaso';
+    src: url('../font/tonovaso.eot?42892060');
+    src: url('../font/tonovaso.eot?42892060#iefix') format('embedded-opentype'),
+    url('../font/tonovaso.woff2?42892060') format('woff2'),
+    url('../font/tonovaso.woff?42892060') format('woff'),
+    url('../font/tonovaso.ttf?42892060') format('truetype'),
+    url('../font/tonovaso.svg?42892060#tonovaso') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 /* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
 /* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
@@ -15,46 +15,46 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'tonovaso';
-    src: url('../font/tonovaso.svg?60450157#tonovaso') format('svg');
+    src: url('../font/tonovaso.svg?42892060#tonovaso') format('svg');
   }
 }
 */
- 
- [class^="icon-"]:before, [class*=" icon-"]:before {
-  font-family: "tonovaso";
-  font-style: normal;
-  font-weight: normal;
-  speak: none;
- 
-  display: inline-block;
-  text-decoration: inherit;
-  width: 1em;
-  margin-right: .2em;
-  text-align: center;
-  /* opacity: .8; */
- 
-  /* For safety - reset parent styles, that can break glyph codes*/
-  font-variant: normal;
-  text-transform: none;
- 
-  /* fix buttons height, for twitter bootstrap */
-  line-height: 1em;
- 
-  /* Animation center compensation - margins should be symmetric */
-  /* remove if not needed */
-  margin-left: .2em;
- 
-  /* you can be more comfortable with increased icons size */
-  /* font-size: 120%; */
- 
-  /* Font smoothing. That was taken from TWBS */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
- 
-  /* Uncomment for 3D effect */
-  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+
+[class^="icon-"]:before, [class*=" icon-"]:before {
+    font-family: "tonovaso";
+    font-style: normal;
+    font-weight: normal;
+    speak: none;
+
+    display: inline-block;
+    text-decoration: inherit;
+    width: 1em;
+    margin-right: .2em;
+    text-align: center;
+    /* opacity: .8; */
+
+    /* For safety - reset parent styles, that can break glyph codes*/
+    font-variant: normal;
+    text-transform: none;
+
+    /* fix buttons height, for twitter bootstrap */
+    line-height: 1em;
+
+    /* Animation center compensation - margins should be symmetric */
+    /* remove if not needed */
+    margin-left: .2em;
+
+    /* you can be more comfortable with increased icons size */
+    /* font-size: 120%; */
+
+    /* Font smoothing. That was taken from TWBS */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+
+    /* Uncomment for 3D effect */
+    /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
- 
+
 .icon-event:before { content: '\e800'; } /* '' */
 .icon-event_available:before { content: '\e801'; } /* '' */
 .icon-event_busy:before { content: '\e802'; } /* '' */
@@ -75,3 +75,8 @@
 .icon-keyboard_arrow_down:before { content: '\e811'; } /* '' */
 .icon-arrow_drop_down_circle:before { content: '\e812'; } /* '' */
 .icon-arrow_downward:before { content: '\e826'; } /* '' */
+.icon-spin5:before { content: '\e838'; } /* '' */
+.icon-facebook:before { content: '\f09a'; } /* '' */
+.icon-instagram:before { content: '\f16d'; } /* '' */
+.icon-whatsapp:before { content: '\f232'; } /* '' */
+.icon-facebook-squared:before { content: '\f308'; } /* '' */
