Add Header Add Nav Add Hero

--- a/_src/css/header.css
+++ b/_src/css/header.css
@@ -2,8 +2,20 @@
 /* Header */
 
 .Header {
+	width: 100%;
+	position: relative;
+	overflow: hidden;
+	height: 100vh;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
+.Header-action {
 	-webkit-align-items: center;
 	align-items: center;
+	bottom: 0;
 	display: -webkit-box;
 	display: -moz-box;
 	display: -ms-flexbox;
@@ -11,28 +23,8 @@
 	display: flex;
 	-webkit-justify-content: center;
 	justify-content: center;
-	padding: 1em;
-	text-align: center;
+	left: 0;
+	padding: 1em 2.25em 3em;
+	position: absolute;
 	width: 100%;
-}
-
-.Header img {
-	width: 8em;
-	margin-bottom: 1em;
-}
-
-.Header p {
-	font-size: .75em;
-}
-
-@media (min-width: 48em) {
-
-	.Header {
-		margin-bottom: 1em;
-	}
-
-	.Header p {
-		font-size: .875em;
-	}
-
 }
