--- a/_src/css/nav-item.css
+++ b/_src/css/nav-item.css
@@ -9,8 +9,35 @@
 /* Nav Item span */
 
 .NavItem span {
-	color: #616161;
-	font-size: .875em;
+	color: #795548;
+	font-size: 1.125em;
 	line-height: 1;
-	font-weight: 900;
+	font-weight: 700;
+	text-transform: uppercase;
+	-webkit-transition: color .3s ease-in-out;
+	-moz-transition: color .3s ease-in-out;
+	-ms-transition: color .3s ease-in-out;
+	-o-transition: color .3s ease-in-out;
+	transition: color .3s ease-in-out;
+	white-space: nowrap;
+}
+
+.NavItem:hover span {
+	color: #ffc400;
+}
+
+@media (min-width: 21em) {
+
+	.NavItem span {
+		font-size: 1.3125em;
+	}
+
+}
+
+@media (min-width: 48em) {
+
+	.NavItem span {
+		font-size: 1.5em;
+	}
+
 }
