--- a/_src/css/nav.css
+++ b/_src/css/nav.css
@@ -4,20 +4,20 @@
 .Nav {
 	position: absolute;
 	width: 100%;
-	padding: 0 0 1em;
+	padding-bottom: 1em;
 	top: 0;
 	left: 0;
 }
 
 .Nav-background {
 	background: rgba(255,255,255,1);
-	background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(231,56,39,0) 100%);
-	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(100%, rgba(231,56,39,0)));
-	background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(231,56,39,0) 100%);
-	background: -o-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(231,56,39,0) 100%);
-	background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(231,56,39,0) 100%);
-	background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(231,56,39,0) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e73827', GradientType=0 );
+	background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,0.72) 24%, rgba(255,255,255,0) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(24%, rgba(255,255,255,0.72)), color-stop(100%, rgba(255,255,255,0)));
+	background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,0.72) 24%, rgba(255,255,255,0) 100%);
+	background: -o-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,0.72) 24%, rgba(255,255,255,0) 100%);
+	background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,0.72) 24%, rgba(255,255,255,0) 100%);
+	background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(255,255,255,0.72) 24%, rgba(255,255,255,0) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff', GradientType=0 );
 	height: 100%;
 	left: 0;
 	position: absolute;
@@ -37,6 +37,38 @@
 	flex-flow: row wrap;
 	-webkit-justify-content: center;
 	justify-content: center;
-	padding: 1em 2.25em;
+	padding: 1em 1.5em;
 	position: relative;
+}
+
+@media (min-width: 48em) {
+
+	.Nav {
+		padding-bottom: 3em;
+	}
+
+	.Nav-menu {
+		padding: 1.5em 1em;
+	}
+
+}
+
+@media (min-width: 72em) {
+
+	.Nav {
+		padding-bottom: 4.5em;
+	}
+
+}
+
+@media (min-width: 96em) {
+
+	.Nav {
+		padding-bottom: 6em;
+	}
+
+	.Nav-menu {
+		padding: 2.25em 1em;
+	}
+
 }
