--- a/_src/css/about.css
+++ b/_src/css/about.css
@@ -2,6 +2,7 @@
 /* About */
 
 .About {
+
 	/*background-color: #fafafa;*/
 	/*background-color: #212121;*/
 	min-height: 100vh;
@@ -12,7 +13,7 @@
 	transition: all .6s;
 }
 
-.About.reverse {
+.About.is-theater {
 	background-color: #212121;
 }
 
@@ -24,6 +25,6 @@
 	transition: all .6s;
 }
 
-.About.reverse p {
+.About.is-theater p {
 	color: #ffffff;
 }
