--- a/_src/css/paragraph.css
+++ b/_src/css/paragraph.css
@@ -1,17 +1,16 @@
 
 .Paragraph {
 	padding: 1.5em 0 1em;
+	margin-bottom: 1em;
 	width: 100%;
+}
+
+.Paragraph:last-of-type {
+	margin-bottom: 0;
 }
 
 .Paragraph-inner {
 	position: relative;
-}
-
-.Paragraph .container {
-	padding: 0 1em;
-	margin: 0 auto;
-	width: 100%;
 }
 
 .Paragraph h1,
@@ -33,24 +32,42 @@
 
 @media (min-width: 48em) {
 
-	.Paragraph .container {
-		max-width: 48em;
+	.Paragraph {
+		margin: 1em 0 1.5em;
+	}
+
+	.Paragraph h2 {
+		font-size: 3.75em;
+		margin-bottom: .375em;
+	}
+
+	.Paragraph p {
+		font-size: 1.5em;
+		max-width: 42rem;
+		margin-bottom: .75em;
 	}
 
 }
 
 @media (min-width: 60em) {
 
-	.Paragraph .container {
-		padding: 0;
-	}
-
 }
 
 @media (min-width: 72em) {
 
-	.Paragraph .container {
-		max-width: 60em;
+	.Paragraph {
+		margin: 1em 0 1.5em;
+	}
+
+	.Paragraph h2 {
+		font-size: 3.75em;
+		margin-bottom: .375em;
+	}
+
+	.Paragraph p {
+		font-size: 1.5em;
+		max-width: 42rem;
+		margin-bottom: .75em;
 	}
 
 }
@@ -58,11 +75,7 @@
 @media (min-width: 96em) {
 
 	.Paragraph {
-		padding: 6em 0;
-	}
-
-	.Paragraph .container {
-		max-width: 72em;
+		margin: 1em 0 1.5em;
 	}
 
     .Paragraph h2 {
