--- a/_src/css/aside-button.css
+++ b/_src/css/aside-button.css
@@ -20,11 +20,11 @@
 	display: flex;
 	-webkit-justify-content: center;
 	justify-content: center;
-	-webkit-transition: all .3s;
-	-moz-transition: all .3s;
-	-ms-transition: all .3s;
-	-o-transition: all .3s;
-	transition: all .3s;
+	-webkit-transition: all .3s, color .225s;
+	-moz-transition: all .3s, color .225s;
+	-ms-transition: all .3s, color .225s;
+	-o-transition: all .3s, color .225s;
+	transition: all .3s, color .225s;
 	height: 100%;
 }
 
