--- a/_src/css/aside.css
+++ b/_src/css/aside.css
@@ -21,7 +21,7 @@
 		left: 0;
 		top: 0;
 		z-index: 2;
-		position: absolute;
+		position: fixed;
 		width: 3em;
 		display: -webkit-box;
 		display: -moz-box;
