--- a/_src/css/aside.css
+++ b/_src/css/aside.css
@@ -3,6 +3,7 @@
 
 .Aside {
 	visibility: hidden;
+	display: none;
 }
 
 /* Aside inner */
@@ -66,6 +67,7 @@
 	    display: -ms-flexbox;
 	    display: -webkit-flex;
 	    display: flex;
+	    padding-right: .375em;
 	    width: 100%;
 	    height: 100%;
     }
