--- a/_src/css/header.css
+++ b/_src/css/header.css
@@ -26,7 +26,7 @@
 	-webkit-justify-content: center;
 	justify-content: center;
 	left: 0;
-	padding: 1em 2.25em 2.25em;
+	padding: 1em 2.25em 0;
 	position: absolute;
 	width: 100%;
 }
@@ -40,7 +40,7 @@
 	text-transform: uppercase;
 }
 
-@media (max-height: 24em) {
+@media (min-width: 21em) {
 
 	.Header-action {
 		padding-bottom: 1em;
@@ -68,6 +68,21 @@
 
 	.Header-action {
 		padding-bottom: 2.25em;
+	}
+
+}
+
+@media (max-height: 24em) {
+
+	.Header-action {
+		-webkit-flex-flow: row-reverse;
+		flex-flow: row-reverse;
+		-webkit-justify-content: space-between;
+		justify-content: space-between;
+		padding-bottom: 0;
+	}
+
+	.Header-action {
 	}
 
 }
