--- a/_src/css/button.css
+++ b/_src/css/button.css
@@ -6,7 +6,7 @@
 	border: solid 2px transparent;
 	margin-bottom: 1em;
 	min-width: 12em;
-	padding: .75em 1em;
+	padding: .5em 1em;
 	-webkit-transition: all .3s ease-in-out;
 	-moz-transition: all .3s ease-in-out;
 	-ms-transition: all .3s ease-in-out;
@@ -46,6 +46,16 @@
 	text-transform: uppercase;
 	font-weight: 900;
 	font-size: 1.5em;
+}
+
+@media (max-width: 24em) {
+
+	/* Button */
+
+	.Button--contact span {
+		font-size: 1.25em;
+	}
+
 }
 
 @media (min-width: 60em) {
