--- a/_src/css/footer.css
+++ b/_src/css/footer.css
@@ -2,14 +2,102 @@
 /* Footer */
 
 .Footer {
+	background-color: #212121;
+	padding: 1.5em 0;
 	text-align: center;
 }
 
 .Footer p {
-	color: #424242;
+	color: #eeeeee;
 	font-size: .875em;
+	margin-bottom: .5em;
 }
 
 .Footer a {
 	color: #2196f3;
+}
+
+.Footer-inner {
+	-webkit-align-items: center;
+	align-items: center;
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-flex-flow: column;
+	flex-flow: column;
+	-webkit-justify-content: center;
+	justify-content: center;
+}
+
+.Footer-social {
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-justify-content: center;
+	justify-content: center;
+	padding: 1em 0;
+	margin-bottom: .5em;
+	width: 100%;
+}
+
+.Footer-socialIcon {
+	-webkit-align-items: center;
+	align-items: center;
+	background-color: #ffffff;
+	border-radius: 50%;
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	height: 3em;
+	-webkit-justify-content: center;
+	justify-content: center;
+	margin-right: 1em;
+	width: 3em;
+}
+
+.Footer-socialIcon:last-of-type {
+	margin-right: 0;
+}
+
+.Footer-socialIcon span {
+	color: #212121;
+	font-size: 1.3125em;
+	text-align: center;
+	width: 100%;
+}
+
+.Footer p.Footer-title {
+	color: #ffab00;
+	font-size: 1.5em;
+	font-weight: 700;
+}
+
+@media (min-width: 48em) {
+
+	.Footer {
+		padding: 2.25em 0;
+	}
+
+	.Footer p {
+		font-size: 1.125em;
+	}
+
+	.Footer p.Footer-title {
+		font-size: 2.25em;
+	}
+
+}
+
+@media (min-width: 96em) {
+
+	.Footer {
+		padding: 4.5em 0;
+	}
+
 }
