--- a/_src/css/lineup-artist.css
+++ b/_src/css/lineup-artist.css
@@ -1,23 +1,51 @@
 
-/* LineUp Artist */
+/* Lineup Artist */
 
-.LineUpArtist {
+.LineupArtist {
 	display: -webkit-box;
 	display: -moz-box;
 	display: -ms-flexbox;
 	display: -webkit-flex;
 	display: flex;
-	-webkit-justify-content: center;
-	justify-content: center;
-	margin: 0 auto 1.5em;
-	width: 100%;
+	position: relative;
+	/*margin: 0 auto;*/
 }
 
-.LineUpArtist:last-of-type {
-	margin-bottom: 0;
+.LineupArtist-image {
+	position: relative;
+	height: 36em;
 }
 
-.LineUpArtist img {
-	display: block;
-	width: 100%;
+.LineupArtist-image img {
+	height: 100%;
+	-webkit-transition: transform .3s ease-in-out;
+	-moz-transition: transform .3s ease-in-out;
+	-ms-transition: transform .3s ease-in-out;
+	-o-transition: transform .3s ease-in-out;
+	transition: transform .3s ease-in-out;
+}
+
+.LineupArtist:hover .LineupArtist-image img {
+	-webkit-transform: scale(1.1);
+	-moz-transform: scale(1.1);
+	-ms-transform: scale(1.1);
+	-o-transform: scale(1.1);
+	transform: scale(1.1);
+}
+
+.LineupArtist-image figcaption {
+	bottom: 0;
+	left: 50%;
+	position: absolute;
+	padding-bottom: 3em;
+	padding-left: 3em;
+}
+
+.LineupArtist-image figcaption span {
+	color: #80d8ff;
+	font-family: "proxima-nova-alt", "proxima-nova", sans-serif;
+	font-size: 3.75em;
+	font-style: italic;
+	font-weight: 800;
+	line-height: .96;
 }
