Normalizando páginas (atrações no index), substituindo script do typekit nos cabeçalhos (fix bug no chrome mobile), atualizando nav das páginas

--- a/_src/css/yearbook.css
+++ b/_src/css/yearbook.css
@@ -54,11 +54,17 @@
 	justify-content: center;
 }
 
+.Yearbook-primary img {
+	width: 100%;
+	height: 100%;
+}
+
 /* Yearbook secondary */
 
 .Yearbook-secondary {
 	-webkit-flex-flow: column;
 	flex-flow: column;
+	align-self: flex-start;
 }
 
 .Yearbook-secondary h2 {
