--- a/_src/css/lineup.css
+++ b/_src/css/lineup.css
@@ -2,6 +2,36 @@
 /* LineUp */
 
 .Lineup {
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	padding: 1.5em 0 3em;
+	overflow: hidden;
+	position: relative;
+	text-align: center;
+	width: 100%;
+
+	/* para normalizar, alterar para a versão modificada */
+	-webkit-align-items: center;
+	align-items: center;
+	-webkit-justify-content: center;
+	justify-content: center;
+	-webkit-flex-flow: column;
+	flex-flow: column;
+}
+
+.Lineup-background {
+	/*background-color: #000000;*/
+	height: 100%;
+	left: 0;
+	position: absolute;
+	top: 0;
+	width: 100%;
+}
+
+.Lineup-inner {
 	-webkit-align-items: center;
 	align-items: center;
 	display: -webkit-box;
@@ -11,27 +41,8 @@
 	display: flex;
 	-webkit-flex-flow: column;
 	flex-flow: column;
-	padding: 1.5em 0 3em;
-	overflow: hidden;
-	position: relative;
-	width: 100%;
-}
-
-.Lineup-background {
-	background-color: #000000;
-	height: 100%;
-	left: 0;
-	position: absolute;
-	top: 0;
-	width: 100%;
-}
-
-.Lineup-inner {
-	display: -webkit-box;
-	display: -moz-box;
-	display: -ms-flexbox;
-	display: -webkit-flex;
-	display: flex;
+	-webkit-justify-content: center;
+	justify-content: center;
 	left: 0;
 	position: relative;
 	top: 0;
