--- a/_src/css/lineup-artist.css
+++ b/_src/css/lineup-artist.css
@@ -2,21 +2,32 @@
 /* Lineup Artist */
 
 .LineupArtist {
+	-webkit-align-items: center;
+	align-items: center;
 	display: -webkit-box;
 	display: -moz-box;
 	display: -ms-flexbox;
 	display: -webkit-flex;
 	display: flex;
+	-webkit-flex-flow: column;
+	flex-flow: column;
+	-webkit-justify-content: center;
+	justify-content: center;
 	position: relative;
+	width: 100%;
 	/*margin: 0 auto;*/
 }
 
-.LineupArtist-image {
+/* Lineup Artist image */
+
+.LineupArtist-figure {
 	position: relative;
 	height: 36em;
 }
 
-.LineupArtist-image img {
+/* Lineup Artist image img element */
+
+.LineupArtist-figure img {
 	height: 100%;
 	-webkit-transition: transform .3s ease-in-out;
 	-moz-transition: transform .3s ease-in-out;
@@ -25,7 +36,7 @@
 	transition: transform .3s ease-in-out;
 }
 
-.LineupArtist:hover .LineupArtist-image img {
+.LineupArtist-figure:hover .LineupArtist-figure img {
 	-webkit-transform: scale(1.1);
 	-moz-transform: scale(1.1);
 	-ms-transform: scale(1.1);
@@ -33,7 +44,9 @@
 	transform: scale(1.1);
 }
 
-.LineupArtist-image figcaption {
+/* Lineup Artist image figcaption element */
+
+.LineupArtist-figure figcaption {
 	bottom: 0;
 	left: 50%;
 	position: absolute;
@@ -41,11 +54,52 @@
 	padding-left: 3em;
 }
 
-.LineupArtist-image figcaption span {
+.LineupArtist-figure figcaption > span {
 	color: #80d8ff;
 	font-family: "proxima-nova-alt", "proxima-nova", sans-serif;
 	font-size: 3.75em;
 	font-style: italic;
 	font-weight: 800;
 	line-height: .96;
+}
+
+.LineupArtist--pagodeDoNova .LineupArtist-figure figcaption > span {
+	font-size: 2.25em;
+}
+
+.LineupArtist--djRenatinho .LineupArtist-figure figcaption > span {
+	font-size: 2.25em;
+}
+
+/* Lineup nowrap */
+
+.LineupArtist .nowrap {
+	white-space: nowrap;
+}
+
+/* Lineup Artist description */
+
+.LineupArtist-description {
+	padding: 4.5em 0 1em 1em;
+	max-width: 24em;
+}
+
+.LineupArtist-description p {
+	color: #80d8ff;
+	font-family: "proxima-nova", sans-serif;
+	font-size: 1.5em;
+	font-weight: 700;
+}
+
+.LineupArtist-inner {
+	display: none;
+	padding-bottom: 3em;
+}
+
+.is-showingMore .LineupArtist-inner {
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
 }
