Atualização dos Tickets, agora os titulos cabem no

--- a/_src/css/_.css
+++ b/_src/css/_.css
@@ -21,7 +21,19 @@ p {
 	width: 100%;
 }
 
+.mobile-hidden {
+	display: none;
+}
+
 @media (min-width: 48em) {
+
+	.mobile-hidden {
+		display: block;
+	}
+
+	.tablet-hidden {
+		display: none;
+	}
 
 	.container {
 		padding: 0 3em 0 4.5em;
