Fixed custom mouse icon tooltip, flex button centered (justify-content add), updated typekit font load through pages

--- a/_src/css/button.css
+++ b/_src/css/button.css
@@ -11,6 +11,8 @@
 	display: flex;
 	-webkit-flex-flow: row nowrap;
 	flex-flow: row nowrap;
+	-webkit-justify-content: center;
+	justify-content: center;
 	margin-bottom: 1em;
 	min-width: 12em;
 	padding: .5em 1em;
