--- a/_src/css/custom-icon.css
+++ b/_src/css/custom-icon.css
@@ -8,6 +8,7 @@
 	height: 40px;
 	margin: 5px 5px 10px 5px;
 	opacity: 0.8;
+	position: relative;
 	width: 24px;
 	z-index: 10;
 }
@@ -76,17 +77,18 @@
 	background: #00b0ff;
 	border-radius: 2px;
 	color: #fff;
-	font-size: .725em;
+	font-size: 1em;
 	font-weight: 600;
+	line-height: 1em;
 	opacity: 0;
 	padding: 5px 0;
 	position: absolute;
-	right: 110%;
+	right: 150%;
 	text-align: center;
 	text-transform: uppercase;
 	transition: opacity .7s;
-	top: 0;
-	width: 150px;
+	top: 20%;
+	width: 8em;
 	z-index: 11;
 }
 
