Updated fontello icon pack with steps icons

--- a/_src/css/_.css
+++ b/_src/css/_.css
@@ -25,10 +25,18 @@ p {
 	display: none;
 }
 
+.mobile-only {
+	display: inline;
+}
+
 @media (min-width: 48em) {
 
 	.mobile-hidden {
 		display: block;
+	}
+
+	.mobile-only {
+		display: none;
 	}
 
 	.tablet-hidden {
