--- a/_src/css/tonovaso.css
+++ b/_src/css/tonovaso.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'tonovaso';
-  src: url('../font/tonovaso.eot?72613670');
-  src: url('../font/tonovaso.eot?72613670#iefix') format('embedded-opentype'),
-       url('../font/tonovaso.woff2?72613670') format('woff2'),
-       url('../font/tonovaso.woff?72613670') format('woff'),
-       url('../font/tonovaso.ttf?72613670') format('truetype'),
-       url('../font/tonovaso.svg?72613670#tonovaso') format('svg');
+  src: url('../font/tonovaso.eot?9989613');
+  src: url('../font/tonovaso.eot?9989613#iefix') format('embedded-opentype'),
+       url('../font/tonovaso.woff2?9989613') format('woff2'),
+       url('../font/tonovaso.woff?9989613') format('woff'),
+       url('../font/tonovaso.ttf?9989613') format('truetype'),
+       url('../font/tonovaso.svg?9989613#tonovaso') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'tonovaso';
-    src: url('../font/tonovaso.svg?72613670#tonovaso') format('svg');
+    src: url('../font/tonovaso.svg?9989613#tonovaso') format('svg');
   }
 }
 */
@@ -81,11 +81,19 @@
 .icon-arrow_forward:before { content: '\e817'; } /* '' */
 .icon-arrow_upward:before { content: '\e818'; } /* '' */
 .icon-message:before { content: '\e819'; } /* '' */
+.icon-edit:before { content: '\e81a'; } /* '' */
+.icon-print:before { content: '\e81b'; } /* '' */
 .icon-arrow_back:before { content: '\e81c'; } /* '' */
+.icon-credit-card:before { content: '\e81d'; } /* '' */
+.icon-ok:before { content: '\e81e'; } /* '' */
+.icon-ok-circled:before { content: '\e81f'; } /* '' */
+.icon-ok-circled2:before { content: '\e820'; } /* '' */
+.icon-basket:before { content: '\e821'; } /* '' */
 .icon-arrow_downward:before { content: '\e826'; } /* '' */
 .icon-keyboard_arrow_left:before { content: '\e827'; } /* '' */
 .icon-keyboard_arrow_right:before { content: '\e828'; } /* '' */
 .icon-spin5:before { content: '\e838'; } /* '' */
+.icon-pagseguro:before { content: '\ebd7'; } /* '' */
 .icon-facebook-messenger:before { content: '\ebd8'; } /* '' */
 .icon-facebook:before { content: '\f09a'; } /* '' */
 .icon-ticket:before { content: '\f145'; } /* '' */
