--- a/_src/css/guide.css
+++ b/_src/css/guide.css
@@ -12,11 +12,13 @@
 }
 
 .Guide-inner {
-	padding: 1em 0;
-	position: relative;
-	right: 0;
-	top: 0;
-	width: 100%;
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-justify-content: center;
+	justify-content: center;
 }
 
 .Guide-list {
@@ -31,5 +33,26 @@
 	flex-flow: column;
 	-webkit-justify-content: space-between;
 	justify-content: space-between;
+	padding: 2.5em 0 2em 0;
 	text-align: center;
+}
+
+@media (min-width: 30em) {
+
+	.Guide-list {
+		-webkit-flex-flow: row wrap;
+		flex-flow: row wrap;
+		-webkit-justify-content: center;
+		justify-content: center;
+	}
+
+}
+
+@media (min-width: 48em) {
+
+	.Guide-list {
+		-webkit-align-items: baseline;
+		align-items: baseline;
+	}
+
 }
