Tickets page finished (steps and points added and styled). Renamed old ticket page (current => old => legacy). Added favicon without full support, only favicon.ico on root.

--- a/_src/css/guide-step.css
+++ b/_src/css/guide-step.css
@@ -41,6 +41,14 @@ p.GuideStep-description {
 	padding: 0 1em;
 }
 
+.GuideStep-description a {
+	color: #2196f3;
+}
+
+.GuideStep-description a:hover {
+	color: #1565c0;
+}
+
 @media (min-width: 30em) {
 
 	.GuideStep {
