--- a/_src/css/footer.css
+++ b/_src/css/footer.css
@@ -7,6 +7,10 @@
 	text-align: center;
 }
 
+.Footer.Footer--tickets {
+	padding: 1.5em 0 8em 0;
+}
+
 .Footer p {
 	color: #eeeeee;
 	font-size: .875em;
