--- a/_src/css/point-tag.css
+++ b/_src/css/point-tag.css
@@ -2,9 +2,6 @@
 /* Point tag */
 
 .PointTag {
-	/*height: 190px;*/
-	/*width: 320px;*/
-	/*margin: 0;*/
 	-webkit-align-items: center;
 	align-items: center;
 	display: -webkit-box;
@@ -16,6 +13,7 @@
 	flex-flow: column;
 	-webkit-justify-content: center;
 	justify-content: center;
+	margin-bottom: 1em;
 	text-align: center;
 	width: 100%;
 }
@@ -27,22 +25,21 @@
 }
 
 h1.PointTag-city {
-	color: #3e2723;
 	font-weight: 700;
 	font-size: 1.5em;
 	letter-spacing: .07em;
-	padding: 1em 0 .5em 0;
+	padding: .25em 0;
+	text-transform: uppercase;
 }
 
 h2.PointTag-local {
-	color: #ffa000;
 	font-weight: 600;
 	font-size: 1.5em;
 	padding: .2em 0;
+	margin-bottom: 0;
 }
 
 .PointTag p {
-	color: #3e2723;
 	font-size: .875em;
 	line-height: .975em;
 	font-weight: 600;
