--- a/_src/css/points.css
+++ b/_src/css/points.css
@@ -1,6 +1,10 @@
 
 /* Points */
 
+.Points {
+	margin-bottom: 2em;
+}
+
 /* Points background */
 
 .Points-background {
@@ -27,10 +31,13 @@
 }
 
 .Points-title {
-	background: #bdbdbd;
-	font-size: 3em;
-	padding: .5em 0;
+	font-family: 'tenby-four', 'proxima-nova', sans-serif !important;
+	font-size: 2em;
+	font-weight: 600;
+	margin-bottom: .5em;
+	padding: .25em 0;
 	text-align: center;
+	text-transform: uppercase;
 	width: 100%;
 }
 
@@ -46,6 +53,6 @@
 	flex-flow: row wrap;
 	-webkit-justify-content: center;
 	justify-content: center;
-	/*padding: 2.5em 0 2em 0;*/
+	margin-bottom: 1.5em;
 	text-align: center;
 }
