--- a/_src/css/tickets-checkout.css
+++ b/_src/css/tickets-checkout.css
@@ -2,11 +2,12 @@
 /* Tickets Checkout */
 
 .TicketsCheckout {
-	position: fixed;
+	background-color: #ffffff;
 	bottom: 0;
-	left: 0;
-	width: 100%;
 	box-shadow: 0 2px 10px 0 rgba(0,0,0,0.25);
+	left: 0;
+	position: fixed;
+	width: 100%;
 }
 
 .TicketsCheckout-inner {
